--- a/drwho/manifest.yaml
+++ b/drwho/manifest.yaml
@@ -3,7 +3,7 @@ id: drwho
 name: Doctor Who
 summary: Doctor Who animation
 desc: Doctor Who animation.
-author: me
+author: magicthighs
 fileName: drwho.star
 packageName: drwho
 recommended_interval: 5
