--- a/daynightmapwide/manifest.yaml
+++ b/daynightmapwide/manifest.yaml
@@ -1,6 +1,6 @@
 ---
 id: day-night-map-wide
-name: Day Night Map
+name: Day Night Map (wide)
 summary: Day & Night World Map
 desc: A map of the Earth showing the day and the night. The map is based on Equirectangular (0°) by Tobias Jung (CC BY-SA 4.0).
 author: Henry So, Jr.
